# IntentRecognition

./: CMakeLists.txt  main.cpp  recognizer.cpp  recognizer.h  split.h
test/: CMakeLists.txt  recognizertest.cpp
